syntax = "proto3";

message StringMessage{
  string msg = 1;
}

message PingMessage{
  double serverTime = 1;
  double clientTime = 2;
}

message PongMessage{
  double serverTime = 1;
  double clientTime = 2;
}

message RpcRequestMessage{
  int64 methodHash = 1;
  bytes payload = 2;
}

message RpcResponseMessage{
  int64 methodHash = 1;
  bytes payload = 2;
}
