syntax = "proto3";

// 消息头 
message PacketHeader{
  int32  id = 1; // 消息id 标识payload对应的消息是什么
  uint32 type = 2; // 消息类型 1:请求 2:响应
  bytes body = 3; //消息体
}

// 错误消息
message ErrorMessage{
  ProtoErrorCode code = 1;
  string info = 2;
}

// 错误码
enum ProtoErrorCode{
  SUCCESS = 0;
  ERROR = 1;
}

